Trois corrections erreurs Booking et Bookinglistuser

--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/CreateBooking.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/CreateBooking.cshtml
@@ -104,7 +104,7 @@
             }
         });
 
-        $("#NbSeatsChange").blur(function() {
+        $("#NbSeatsChange").change(function() {
             var Amount = $("#AmountCalculation");
             var Nbseat = $("#NbSeatsChange").val();
             var Flight = $("#IdFlight").val();
