--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Airports/GetAirports.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Airports/GetAirports.cshtml
@@ -18,11 +18,11 @@
 
 @if (ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
 {
-    <p><a class="btn btn-outline-info btn-sm disabled"> <i class="fa-solid fa-plus fa-xs m-2"></i> Add New Airport</a></p>
+    <p><a class="btn btn-outline-info btn-sm disabled"> <i class="fa-solid fa-plus m-2"></i> Add New Airport</a></p>
 }
 else
 {
-    <p><a class="btn btn-outline-info btn-sm udrconst"> <i class="fa-solid fa-plus fa-xs m-2"></i> Add New Airport</a></p>
+    <p><a class="btn btn-outline-info btn-sm udrconst"> <i class="fa-solid fa-plus m-2"></i> Add New Airport</a></p>
 }
 
 
@@ -52,15 +52,15 @@ else
     @if (ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
     {
         <td>
-            <a class="btn btn-dark btn-sm disabled udrconst" ><i class="fa-solid fa-pen m-2"></i></a> |
-            <a class="btn btn-danger btn-sm disabled udrconst" ><i class="fa-solid fa-trash m-2"></i></a>
+            <a class="btn btn-dark btn-sm disabled udrconst" ><i class="fa-solid fa-pen  fa-xs m-2"></i></a> |
+            <a class="btn btn-danger btn-sm disabled udrconst" ><i class="fa-solid fa-trash fa-xs m-2"></i></a>
         </td>
     }
     else
     {
         <td>
-            <a class="btn btn-dark btn-sm udrconst" ><i class="fa-solid fa-pen m-2"></i></a> |
-            <a class="btn btn-danger btn-sm udrconst" ><i class="fa-solid fa-trash m-2"></i></a>
+            <a class="btn btn-dark btn-sm udrconst" ><i class="fa-solid fa-pen fa-xs m-2"></i></a> |
+            <a class="btn btn-danger btn-sm udrconst" ><i class="fa-solid fa-trash fa-xs m-2"></i></a>
         </td>
     }
         </tr>
