--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/Index.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/Index.cshtml
@@ -21,14 +21,14 @@
 </div>
 
 <div id="data">
-    <a class="mercury" title="mercury" href="#mercuryspeed" >Mercury</a>
+    <a class="mercury noTrip" title="mercury" href="#mercuryspeed" >Mercury</a>
     <a class="venus" title="venus" href="#venusspeed" onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Venus"})'">Venus</a>
     <a class="earth active" title="earth" href="#earthspeed"onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Earth"})'">Earth</a>
     <a class="mars" title="mars" href="#marsspeed"onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Mars"})'">Mars</a>
     <a class="jupiter" title="jupiter" href="#jupiterspeed" onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Jupiter"})'">Jupiter</a>
     <a class="saturn" title="saturn" href="#saturnspeed" onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Saturn"})'">Saturn</a>
-    <a class="uranus" title="uranus" href="#uranusspeed">Uranus</a>
-    <a class="neptune" title="neptune" href="#neptunespeed">Neptune</a>
+    <a class="uranus noTrip" title="uranus" href="#uranusspeed">Uranus</a>
+    <a class="neptune noTrip" title="neptune" href="#neptunespeed">Neptune</a>
 </div>
 <div id="controls">
     <label class="set-view">
@@ -190,19 +190,10 @@
     })
 
 
-    $(".neptune").on("click",
+    $(".noTrip").on("click",
         function() {
             toastr.info("Trip Currently unavailable");  
         });
-    $(".uranus").on("click",
-        function() {
-            toastr.info("Trip Currently unavailable");  
-        });
-    $(".mercury").on("click",
-        function() {
-            toastr.info("Trip Currently unavailable");  
-        });
-
 </script>
 
 @*<a class="mercury" title="mercury" href="#mercuryspeed" onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Mercury"})'">Mercury</a>
