--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -177,17 +177,22 @@
 
 @*Navbar End*@
 
+
+<footer class="footer position-fixed text-center text-lg-start">
+    <div class="container d-flex justify-content-center">
+        <div>
+            &copy; Projet WEB | EPHEC 2021 - 2022 By Antoine HALLET - Corentin DECONNINCK - Hammadi CHADLI
+        </div>
+    </div>
+</footer>
+
 <div class="container">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
 </div>
 
-<footer class="footer position-fixed text-center">
-    <div class="container">
-        &copy; Projet WEB | EPHEC 2021 - 2022 | By Antoine HALLET - Corentin DECONNINCK - Hammadi CHADLI
-    </div>
-</footer>
+
 </body>
 </html>
 
