Change to updateClient ok

--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/Index.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/Index.cshtml
@@ -24,7 +24,7 @@
     <a class="mercury noTrip" title="mercury" href="#mercuryspeed" >Mercury</a>
     <a class="venus" title="venus" href="#venusspeed" onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Venus"})'">Venus</a>
     <a class="earth active" title="earth" href="#earthspeed"onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Earth"})'">Earth</a>
-    <a class="mars noTrip" title="mars" href="#marsspeed"onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Mars"})'">Mars</a>
+    <a class="mars noTrip" title="mars" href="#marsspeed">Mars</a>
     <a class="jupiter" title="jupiter" href="#jupiterspeed" onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Jupiter"})'">Jupiter</a>
     <a class="saturn" title="saturn" href="#saturnspeed" onclick="location.href = '@Url.Action("CreateBooking","Booking",new { planetName ="Saturn"})'">Saturn</a>
     <a class="uranus noTrip" title="uranus" href="#uranusspeed">Uranus</a>
