--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UpdateUser.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UpdateUser.cshtml
@@ -27,7 +27,7 @@
     <div class="row mt-5">
         <div class="form-group col">
             <label asp-for="Username" class="control-label text-white"></label>
-            <input asp-for="Username" class="form-control" />
+            <input asp-for="Username" class="form-control disabled" readonly="readonly" />
             <span asp-validation-for="Username" class="text-danger"></span>
         </div>
         <div class="form-group col">
