--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Index.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Index.cshtml
@@ -15,3 +15,5 @@
     </div>
 </div>
 
+<script src="~/lib/toastr.js/toastr.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
