--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
@@ -31,8 +31,8 @@
             
     <div class="row mt-3">
         <div class="form-group col">
-            <label asp-for="Username" class="control-label text-white"></label>
-            <input type="text" asp-for="Username" class="form-control" />
+            <label asp-for="Username" class="control-label text-white "></label>
+            <input type="text" asp-for="Username" class="form-control nowhitespaces" />
             <span asp-validation-for="Username" class="text-danger"></span>
         </div>
         <div class="form-group col">
@@ -99,6 +99,7 @@
         });
     </script>
     <script src="~/js/userForSignUp.js"> </script>
+    <script src="~/js/NoWhiteSpaces.js"></script>
 
 }
 
